modify .envrc for 1.9.3 (needed for mongoid); remove config lines referencing active_record; remove database.yml. Can successfully save mongoid documents to db from console

--- a/.envrc
+++ b/.envrc
@@ -1,9 +1,9 @@
 i=$(rvm current)
-if [[ $i =~ "ruby-1\.9\.2-p.*@rails3\.2"    ]];
+if [[ $i =~ "ruby-1\.9\.3-p.*@rails3\.2\.8"    ]];
   then true;
   else
   echo "mongo...?";
-  echo "rvm use 1.9.2@rails3.2";
-  rvm use 1.9.2@rails3.2;
+  echo "rvm use 1.9.3@rails3.2.8";
+  rvm use 1.9.3@rails3.2.8;
 fi;
 
