--- a/.envrc
+++ b/.envrc
@@ -1,9 +1,9 @@
 i=$(rvm current)
-if [[ $i =~ "ruby-1\.9\.3-p.*@rails3\.2\.8"    ]];
+if [[ $i =~ "ruby-1\.9\.3-p.*@sysys"    ]];
   then true;
   else
   echo "mongo...?";
-  echo "rvm use 1.9.3@rails3.2.8";
-  rvm use 1.9.3@rails3.2.8;
+  echo "rvm use 1.9.3@sysys";
+  rvm use 1.9.3@sysys;
 fi;
 
