--- a/.envrc
+++ b/.envrc
@@ -3,7 +3,7 @@ if [[ $i =~ "ruby-1\.9\.3-p.*@sysys"    ]];
   then true;
   else
   echo "mongo...?";
-  echo "rvm use 1.9.3@sysys";
-  rvm use 1.9.3@sysys;
+  echo "rvm use --create 1.9.3@sysys";
+  rvm use --create 1.9.3@sysys;
 fi;
 
