--- a/.envrc
+++ b/.envrc
@@ -2,8 +2,6 @@ i=$(rvm current)
 if [[ $i =~ "ruby-1\.9\.3-p.*@sysys"    ]];
   then true;
   else
-  echo "mongo...?";
-  echo "rvm use --create 1.9.3@sysys";
+  # echo "rvm use --create 1.9.3@sysys";
   rvm use --create 1.9.3@sysys;
 fi;
-
