--- a/.envrc
+++ b/.envrc
@@ -3,5 +3,5 @@ if [[ $i =~ "ruby-1\.9\.3-p.*@sysys"    ]];
   then true;
   else
   # echo "rvm use --create 1.9.3@sysys";
-  rvm use --create 1.9.3@sysys;
+  rvm use --create 1.9.3-p194@sysys;
 fi;
