removing custom id field for sp_day; set safe mode to true for development

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -13,7 +13,7 @@ development:
       options:
         # Change whether the session persists in safe mode by default.
         # (default: false)
-        # safe: false
+        safe: true
 
         # Change the default consistency model to :eventual or :strong.
         # :eventual will send reads to secondaries, :strong sends everything
