--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "react-router": "~0.9.4"
+    "react-router": "~0.9.4",
+    "js-yaml": "~3.2.5"
   }
 }
