--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -3,13 +3,7 @@ development:
   sessions:
     # Defines the default session. (required)
     default:
-      # Defines the name of the default database that Mongoid can connect to.
-      # (required).
-      database: mongo_development
-      # Provides the hosts the default session can connect to. Must be an array
-      # of host:port pairs. (required)
-      hosts:
-        - localhost:27017
+      uri: <%= ENV['MONGOLAB_URI'] %>
       options:
         # Change whether the session persists in safe mode by default.
         # (default: false)
