--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/sherwinyu/sp",
   "dependencies": {
+    "json-loader": "0.5.2",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.8.0",
     "css-loader": "^0.9.1",
@@ -29,7 +30,7 @@
     "file-loader": "^0.8.1",
     "humps": "^0.4.2",
     "lodash": "^3.0.0",
-    "moment": "^2.9.0",
+    "moment-timezone": "0.4.0",
     "react": "~0.12",
     "react-bootstrap-datetimepicker": "0.0.9",
     "react-router": "~0.11.6",
