--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   },
   "homepage": "https://github.com/sherwinyu/sp",
   "dependencies": {
-    "json-loader": "0.5.2",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.8.0",
     "css-loader": "^0.9.1",
-    "eonasdan-bootstrap-datetimepicker": "3.1.3",
+    "eonasdan-bootstrap-datetimepicker": "^3.1.3",
     "event-emitter": "^0.3.2",
     "file-loader": "^0.8.1",
     "humps": "^0.4.2",
+    "json-loader": "0.5.2",
     "lodash": "^3.0.0",
     "moment-timezone": "0.4.0",
     "react": "~0.12",
